--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel index.html --open",
-    "build": "parcel build index.html --no-source-map --no-cache"
+    "build": "parcel build index.html --no-source-maps --no-cache"
   },
   "devDependencies": {
     "sass": "^1.27.0",
