--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "build": "parcel build index.html --no-source-maps --no-cache"
   },
   "devDependencies": {
-    "sass": "^1.27.0",
-    "parcel-plugin-clean-easy": "^1.0.2"
+    "cssnano": "^4.1.10",
+    "parcel-plugin-clean-easy": "^1.0.2",
+    "sass": "^1.27.0"
   },
   "parcelCleanPaths": [
     "dist",
